- Added API to lookup geolocation based on IP address - Added response object - Updated command to get IP address