@@ -17,18 +17,17 @@ public class Tracer {
 		try {
 //			Process traceRt;
 			String command;
-			if (os.contains("win"))
-				command = "tracert";
-//				traceRt = Runtime.getRuntime().exec("tracert " + url);
-			else
-				command = "traceroute";
-//				traceRt = Runtime.getRuntime().exec("traceroute " + url);
-
-			ProcessBuilder ps = new ProcessBuilder(command, url);
+			if (os.contains("win")) {
+				command = "tracert " + url;
+			} else {
+				command = "traceroute " + url;
+			}
+//			traceRt = Runtime.getRuntime().exec(command);
+			ProcessBuilder ps = new ProcessBuilder("cmd.exe", "/c", command);
 			ps.redirectErrorStream(false);
 			Process pr = ps.start();
 			BufferedReader in = new BufferedReader(new InputStreamReader(pr.getInputStream()));
-//			String line;
+			String line;
 			int numberOfLines = 0;
 			while ((route = in.readLine()) != null) {
 				System.out.println(route + "#####Line: " + numberOfLines);
@@ -39,13 +38,6 @@ public class Tracer {
 
 			pr.destroy();
 			in.close();
-
-			// read the output from the command
-//			route = convertStreamToString(traceRt.getInputStream());
-
-			// read any errors from the attempted command
-//			String errors = convertStreamToString(traceRt.getErrorStream());
-//			if(!Objects.equals(errors, "")) System.out.println(errors);
 		} catch (IOException e) {
 			e.printStackTrace();
 		}
@@ -56,10 +48,5 @@ public class Tracer {
 			return temp.substring(0, temp.length()-1);
 		else
 			return "No IP address found";
-	}
-
-	private String convertStreamToString(InputStream inputStream) {
-		return new BufferedReader(new InputStreamReader(inputStream))
-			.lines().collect(Collectors.joining("\n"));
 	}
 }
